panoptic_front/src/assets/main.css
:root {
  --border-color: rgb(195, 207, 217);
  --validate-border: rgb(163, 208, 209);
  --refuse-border: rgb(213, 180, 191);
  --light-grey: rgb(233, 233, 233);
  --grey-text: #515151;

  --text-color: rgb(33, 37, 41);

  --grey: rgb(246, 246, 247);
  --tab-grey: rgb(226, 226, 226);

  --toggle-width: 40px;
  --toggle-height: 10px;
  --toggle-border: 2px;
  --toggle-font-size: 11px;
  --toggle-duration: 20ms;
}

.toggle-container:focus {
  box-shadow: none !important;
}

.unselectable {
  -moz-user-select: -moz-none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -o-user-select: none;
  user-select: none;
}

.clickable:hover {
  cursor: pointer;
}

.bi-caret-right {
  display: inline-block;
  transition: 0.2s;
  margin-left: 1rem;
}

.bi-caret-right.expand {
  transform: rotate(90deg) !important;
}

.bi-caret-right.hide {
  transform: rotate(0deg) !important;
}

.menu {
  overflow-wrap: break-word;
}


.hover-light:hover {
  background-color: rgb(240, 240, 240) !important;
}

.label {
  font-size: 0.875rem;
  padding: 0.25rem 0.5rem;
  /* color: #212529; */
}

.smaller {
  font-size: 0.875rem;
  padding: 0.25rem 0rem;
  /* color: #212529; */
}

body {

  --text-color: rgb(41, 56, 69);


  height: 100vh;
  width: 100vw;
  overflow: hidden;
  color: var(--text-color);
  background: var(--color-background);
  /* transition: color 0.5s, background-color 0.5s; */
  /* line-height: 1.6; */
  /* font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
    Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; */
  /* font-size: 15px; */
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-family: Inter, Din, Barlow, 'IBM Plex Sans', sans-serif !important;
  /* font-family: Helvetica !important; */
  /* font-style: italic; */
}

.base-hover {
  border-radius: 3px;
  cursor: pointer;
}

.base-hover:hover {
  background-color: rgb(240, 240, 240) !important;
}

.base-btn {
  border-radius: 3px;
  padding: 2px;
  position: relative;
  top: -2px;
  cursor: pointer;
}

.bb,
.bbc,
.bbb {
  border-radius: 3px;
  padding: 1px 3px;
  position: relative;
  top: 0px !important;
  cursor: pointer;
}

.bnr {
  padding: 1px 3px;
  position: relative;
  top: 0px;
  cursor: pointer;
}

.sb,
.sbc,
.sbb {
  border-radius: 3px;
  padding: 0px 2px;
  /* position: relative; */
  cursor: pointer;

}

.bbc,
.sbc {
  background-color: hsl(0, 0%, 95%);
}

.bbb {
  border: 1px solid var(--border-color);
  top: -2px;
}

.sbb {
  border: 1px solid var(--border-color);
  top: -1px;
}

.bnr:hover,
.bbc:hover,
.bb:hover,
.bbb:hover,
.sb:hover,
.sbc:hover,
.sbb:hover {
  background-color: hsl(0, 0%, 90%) !important;
}

.base-btn:hover {
  background-color: rgb(240, 240, 240) !important;
}

.sm-btn {
  border-radius: 3px;
  padding: 0px 2px;
  margin: 3px;
  cursor: pointer;
}

.sm-btn:hover {
  background-color: rgb(240, 240, 240) !important;
}

.property-item {
  padding: 3px;
  padding-right: 0;
  border-top: 1px solid var(--border-color);
}

.custom-hr {
  border-bottom: 1px solid rgb(195, 207, 217);
  margin: 0;
  padding: 0;
}

.tab-button {
  border: none;
  background-color: white;
  font-size: 13px;
  margin: 0;
  padding: 0;
  line-height: 30px;
  color: rgb(41, 56, 69);
}

.tab-button.active {
  border-bottom: 1px solid rgb(74, 93, 107);
}

.tab-icon {
  border: none;
  background-color: white;
  font-size: 20px;
  line-height: 30px;
  margin: 0px;
  padding: 0;
  color: rgb(74, 93, 107)
}


.text-input {
  -webkit-appearance: none !important;
  -moz-appearance: none !important;
  appearance: none !important;
  border: 2px solid rgb(197, 206, 213);
  margin: 0;
  padding: 8px;
  padding-bottom: 8px;
  /* margin-top: 1px; */
  height: 16px;
  /* line-height: 10px; */
  font-size: 10px;
  color: var(--text-color);
  border-radius: 3px;

  width: 100%;
}

.text-input:focus {
  -webkit-appearance: none !important;
  -moz-appearance: none !important;
  appearance: none !important;
  outline-width: 0;
  border: 2px solid rgb(197, 206, 213);
  outline: none;
}


.tree {
  text-align: start;
  --spacing: 1.3rem;
  --radius: 30px;
  margin-bottom: 0;
}

.tree li {
  display: block;
  position: relative;
  margin-left: 0;
  padding-left: calc(2 * var(--spacing) - var(--radius) - 0px);
}

.tree ul {
  margin-left: calc(var(--radius) - var(--spacing));
  /* margin-left: 0; */
  padding-left: 0;
  margin-bottom: 0;
}

.tree ul li {
  border-left: 1px solid rgb(195, 207, 217);
}

.tree ul li:last-child {
  border-color: transparent;
}

.tree ul li::before {
  content: '';
  display: block;
  position: absolute;
  top: calc(var(--spacing) / -2);
  left: -1px;
  width: calc(var(--spacing) + 1px);
  height: calc(var(--spacing) + 3px);
  border: solid rgb(195, 207, 217);
  border-width: 0 0 1px 1px;
}

.tree summary {
  text-align: center;
  display: inline-block;
  position: relative;
  cursor: pointer;
  z-index: 10 !important;
  background-color: rgb(195, 207, 217);
  margin: 3px 0px 0px 0px;
  border-radius: 2px;
  padding: 0.2em 0.7em;
  /* min-width: 30px; */
  font-size: 10px;
  width: auto;
}

.tree summary::marker,
.tree summary::-webkit-details-marker {
  display: none;
}

.tree summary:focus {
  outline: none;
}

.tree summary:focus-visible {
  outline: 1px dotted #000;
}

.node {
  text-align: center;
  display: inline-block;
  position: relative;
  cursor: pointer;
  z-index: 10 !important;
  /* background-color: rgb(195, 207, 217); */
  /* margin: 3px 0px 0px 0px; */
  border-radius: 2px;
  /* padding: 0.2em 0.3em; */
  padding-left: 8px;
  padding-top: 2px;
  /* min-width: 30px; */
  font-size: 15px;
  width: auto;
}

button {
  border: 2px solid var(--border-color);
  border-radius: 3px !important;
  padding: 0px;
  font-size: 12px !important;
  background-color: #ffffff;
  color: rgb(76, 92, 107);
  display: flex !important;
  align-items: center !important;
  justify-content: center !important;
  padding-left: 3px;
  padding-right: 3px;
  /* height: 19px; */
  /* position: relative; */
}

.button {
  border: 2px solid var(--border-color);
  font-size: 11px;
  background-color: #ffffff;
  color: rgb(76, 92, 107);
  border-radius: 3px;
  padding: 0px 3px;
  /* position: relative; */
  /* top: 2px;
  cursor: pointer; */
  cursor: pointer;
}

input[type=number]::-webkit-outer-spin-button,
input[type=number]::-webkit-inner-spin-button {
  -webkit-appearance: none !important;
  margin: 0 !important;
}



.text-dimmed {
  color: #e0e0e0;
}

.input-lg {
  font-size: 16px !important;
  /* line-height: 20px !important; */
  height: 25px !important;
}

.hr {
  border-bottom: 1px solid var(--border-color);
}

.custom-date-picker {
  height: 23px;
  /* font-size: 12px !important; */
  padding-left: 2px;
  padding-right: 2px;

  --dp-button-height: 22px;
  /*Size for buttons in overlays*/
  --dp-month-year-row-height: 10px;
  /*Height of the month-year select row*/
  --dp-month-year-row-button-size: 0px;
  /*Specific height for the next/previous buttons*/
  --dp-button-icon-height: 0px;
  /*Icon sizing in buttons*/
  --dp-cell-size: 25px;
  /*Width and height of calendar cell*/
  --dp-cell-padding: 10px;
  /*Padding in the cell*/
  --dp-common-padding: 5px;
  /*Common padding used*/
  --dp-input-icon-padding: 20px;
  /*Padding on the left side of the input if icon is present*/
  --dp-input-padding: 0px;
  /*Padding in the input*/
  --dp-menu-min-width: 260px;
  /*Adjust the min width of the menu*/
  --dp-action-buttons-padding: 2px 5px;
  /*Adjust padding for the action buttons in action row*/
  --dp-row-margin: 5px 0;
  /*Adjust the spacing between rows in the calendar*/
  --dp-calendar-header-cell-padding: 0.5rem;
  /*Adjust padding in calendar header cells*/
  --dp-two-calendars-spacing: 10px;
  /*Space between multiple calendars*/
  --dp-overlay-col-padding: 3px;
  /*Padding in the overlay column*/
  --dp-time-inc-dec-button-size: 32px;
  /*Sizing for arrow buttons in the time picker*/
  --dp-menu-padding: 3px 4px;
  /*Menu padding*/

  /*Font sizes*/
  --dp-font-size: 12px;
  /*Default font-size*/
  --dp-preview-font-size: 10px;
  /*Font size of the date preview in the action row*/
  --dp-time-font-size: 10px;
  /*Font size in the time picker*/

}

.dp__input_icons {
  padding: 0px;
  width: 0px;
  height: 0px;
  visibility: hidden;
}

.v-popper__arrow-container {
  box-shadow: none !important;
  display: none !important;
  width: 0;
  height: 0;
  border: none !important;
}

.v-popper__arrow-outer {
  display: none !important;
  border: none !important;
}

.v-popper__arrow-inner {
  border: none !important;
  display: none !important;
}

.v-popper--theme-dropdown .v-popper__inner {
  border: none !important;
  box-shadow: none !important;
}

.v-popper--theme-dropdown .v-popper__inner {
  background: none !important;
  overflow: visible !important;
}

.text-dim {
  color: rgb(90, 90, 90);
}

.text-placeholder {
  color: rgb(117, 117, 117);
}

*:focus {
  outline: none;
}


.btn-blue {
  padding: 5px;
  /* background-color: rgb(225, 226, 227); */

  background-color: rgb(73, 134, 213);
  color: white;
  cursor: pointer;
  border-radius: 5px;
  border: 1px solid var(--border-color);
}

.btn-blue:hover {
  background-color: rgb(3, 100, 225);
}

.btn-grey {
  cursor: pointer;
  padding: 5px;
  border-radius: 5px;
  background-color: var(--grey);
  border: 1px solid var(--border-color);
  /* color: black; */
}

.hover-grey:hover {
  background-color: rgb(219, 219, 219);
}

.flex-center {
  display: flex;
  /* justify-content: center; */
  /* Horizontal centering */
  align-items: center;
  /* Vertical centering */
}

.sep {
  border-left: 1px solid var(--border-color);
  height: 80%;
}

.disabled {
  background-color: rgb(219, 219, 219);
}

.dropdown-input {
  box-shadow: 0px 0px 3px 1px var(--border-color);
  -webkit-box-shadow: 0px 0px 3px 1px var(--border-color);
  -moz-box-shadow: 0px 0px 3px 1px var(--border-color);
}

input[type=number]::-webkit-outer-spin-button,
input[type=number]::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}

input[type=number] {
    -moz-appearance:textfield;
}

